--- a/201/About Me/css/style.css
+++ b/201/About Me/css/style.css
@@ -1,5 +1,5 @@
 * {
-    background-color: #3e4437;
+    /* background-color: #3e4437; */
     font-family: 'Courier New', Courier, monospace;
     color: aliceblue;
     text-align: center;
@@ -7,7 +7,7 @@
 
 body {
     background-image: url(https://images.pexels.com/photos/580151/pexels-photo-580151.jpeg);
-    background-color: #082334;
+    /* background-color: #082334; */
     width: 1200px;
     margin: 0 auto;
 }
@@ -53,7 +53,7 @@ a:active {
 }
 
 main {
-    background-color: rgb(52, 66, 66);
+    /* background-color: rgb(52, 66, 66); */
 }
 
 strong {
@@ -63,7 +63,7 @@ strong {
 h1 {
     font-size: 24px;
     padding-block: 10px;
-    background-color: #cbccbc;
+    background-color: #474a10;
 }
 
 h2 {
@@ -72,6 +72,13 @@ h2 {
     padding: 2px;
     font-size: 18px;
     background-color: #526141;
+}
+
+button {
+    color: #25301a;
+    margin: 15px;
+    padding: 15px;
+    font-size: 18px;
 }
 
 p {
