adjusted CSS parameters

--- a/201/AboutMe/css/reset.css
+++ b/201/AboutMe/css/reset.css
@@ -49,9 +49,9 @@ center,
 dl,
 dt,
 dd,
-ol,
+/* ol,
 ul,
-li,
+li, */
 fieldset,
 form,
 label,
@@ -111,10 +111,10 @@ body {
     line-height: 1;
 }
 
-ol,
+/* ol,
 ul {
     list-style: none;
-}
+} */
 
 blockquote,
 q {
