--- a/201/AboutMe/css/style.css
+++ b/201/AboutMe/css/style.css
@@ -1,8 +1,6 @@
 * {
-    /* background-color: #3e4437; */
     font-family: 'Courier New', Courier, monospace;
     color: #aac1c5;
-    text-align: center;
 }
 
 body {
@@ -12,62 +10,49 @@ body {
 }
 
 header {
-    color: #082334;
-    height: 50px;
+    background-color: #aac1c5;
+    text-align: center;
 }
 
-nav ul {
+nav ul a {
     margin: 15px;
     font-size: 18px;
 }
 
 ul li {
-    padding: 10px;
-    display: inline;
+    margin: 15px;
     background-color: #d5dad3;
+    color: #082334;
 }
 
 a:link {
     color: rgb(100, 110, 161);
-    background-color: transparent;
-    text-decoration: none;
 }
 
 a:visited {
     color: rgb(49, 51, 65);
-    background-color: transparent;
-    text-decoration: none;
 }
 
 a:hover {
     color: rgb(58, 56, 168);
-    background-color: transparent;
     text-decoration: underline;
 }
 
 a:active {
     color: rgb(0, 26, 255);
-    background-color: transparent;
     text-decoration: underline;
-}
-
-main {
-    /* background-color: rgb(52, 66, 66); */
-}
-
-strong {
-    font-weight: bold;
 }
 
 h1 {
     font-size: 24px;
     padding-block: 10px;
     background-color: #1e3212;
+    text-align: center;
 }
 
 h2 {
     color: aliceblue;
-    /* margin-top: 20px; */
+    text-align: center;
     padding-top: 5px;
     margin-bottom: 20px;
     padding-bottom: 5px;
@@ -79,21 +64,23 @@ h2 {
 
 p {
     font-size: 15px;
+    text-align: center;
     background-color: rgb(44, 39, 34);
     margin: 15px;
     padding: 15px;
 }
 
 ol li {
-    list-style-type: lower-alpha;
     color: #082334;
     background-color: #d5dad3;
-    display: block;
+    display: list-item;
+    text-align: center;
     padding: 3px;
 }
 
 button {
     color: #082334;
+    text-align: center;
     margin: 15px;
     padding: 15px;
     font-size: 18px;
