fixed display of header adding #navbar

--- a/201/AboutMe/css/style.css
+++ b/201/AboutMe/css/style.css
@@ -14,9 +14,11 @@ header {
     text-align: center;
 }
 
-nav ul a {
+#navbar {
+    list-style-type: none;
     margin: 15px;
     font-size: 18px;
+    display: inline;
 }
 
 ul li {
